import 'package:flutter/cupertino.dart';

class Controllers{
  static TextEditingController titleCreatingNote = TextEditingController();

  static TextEditingController descriptionCreatingNote = TextEditingController();

  static String dateController = 'Дата';
}